--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:theme="@style/Theme.RoomLearning">
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.RoomLearning.NoActionBar">
+            android:exported="true">
+            <!--            android:label="@string/app_name"-->
+            <!--            android:theme="@style/Theme.RoomLearning">-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
